adding cucumber test

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@
 # Log file
 *.log
 
+.DS_Store
+/.DS_Store
+*/.DS_Store
+*/target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
 # BlueJ files
 *.ctxt
 
