--- a/APPLICATION/springboot-test-container-example/pom.xml
+++ b/APPLICATION/springboot-test-container-example/pom.xml
@@ -42,10 +42,17 @@
 			<scope>test</scope>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
 			<version>1.17.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.17.6</version>
 		</dependency>
 
 		<dependency>
