--- a/APPLICATION/springboot-pact-contract-testing/springboot-pact-contract-client/pom.xml
+++ b/APPLICATION/springboot-pact-contract-testing/springboot-pact-contract-client/pom.xml
@@ -23,6 +23,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.2.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
