--- a/APPLICATION/springboot-mockito/src/main/resources/application.properties
+++ b/APPLICATION/springboot-mockito/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:h2:file:/data/demo
 spring.h2.console.enabled=true
 
+application.success.msg=api executed successfully 
+application.failure.msg=api execution failed
 
